Bugfix for dark mode

--- a/localizator/static/localizator/dark-mode.css
+++ b/localizator/static/localizator/dark-mode.css
@@ -20,7 +20,7 @@
   color: #ddd !important;
 }
 
-[data-theme="dark"] .py-2, .custom-select, .map-table, .table-stripe {
+[data-theme="dark"] .py-2{
   background-color: #333 !important;
   color: #ddd !important;
 }
@@ -30,7 +30,7 @@
   color: #ddd !important;
 }
 
-/* [data-theme="dark"] .custom-select {
+[data-theme="dark"] .custom-select {
   background-color: #333 !important;
   color: #ddd !important;
 }
@@ -43,4 +43,4 @@
 [data-theme="dark"] .table-stripe {
   background-color: #333 !important;
   color: #ddd !important;
-} */
+}
